k8s/03-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: machinist-tutuplapak
  labels:
    app: auth-service
spec:
  selector:
    app: auth-service
  ports:
  - port: 8001
    targetPort: 8001
    protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: core-service
  namespace: machinist-tutuplapak
  labels:
    app: core-service
spec:
  selector:
    app: core-service
  ports:
  - port: 8002
    targetPort: 8002
    protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: files-service
  namespace: machinist-tutuplapak
  labels:
    app: files-service
spec:
  selector:
    app: files-service
  ports:
  - port: 8003
    targetPort: 8003
    protocol: TCP
  type: ClusterIP
